--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
+# Python
 __pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Virtual environment
 myenv/
+venv/
+
+# VSCode settings
 .vscode/
+
+# OS generated files
+desktop.ini
+Thumbs.db
+.DS_Store
+
+# Temporary Excel lock files
 ~$*.xlsx
