--- a/requirements.txt
+++ b/requirements.txt
@@ -24,8 +24,9 @@ setuptools==80.9.0
 six==1.17.0
 sympy==1.14.0
 threadpoolctl==3.6.0
-torch==2.8.0+cpu
+torch==2.8.0
 typing_extensions==4.14.1
 tzdata==2025.2
 Werkzeug==3.1.3
+
 
